--- a/src/main/resources/static/css/styleLoginRegister.css
+++ b/src/main/resources/static/css/styleLoginRegister.css
@@ -1,6 +1,3 @@
-
-/* CSS reset */
-
 body {
   position: relative;
 }
@@ -15,12 +12,10 @@ body {
   font-family: Arial,sans-serif;
 }
 
-/* remove a linha dos links */
 a{
   text-decoration: none;
 }
 
-/* esconde as ancoras da tela */
 a.links{
   display: none;
 }
@@ -65,8 +60,6 @@ label{
   position: relative;
 }
 
-
-/* placeholder */
 ::-webkit-input-placeholder  {
   color: #bebcbc;
   font-style: italic;
@@ -78,12 +71,10 @@ textarea:-moz-placeholder{
   font-style: italic;
 }
 
-
 input {
   outline: none;
 }
 
-/*estilo dos input,  menos o checkbox */
 input:not([type="checkbox"]){
   width: 95%;
   margin-top: 4px;
@@ -100,7 +91,6 @@ input:not([type="checkbox"]){
   transition: all 0.2s linear;
 }
 
-/*estilo do botão submit */
 input[type="submit"]{
   width: 100%!important;
   cursor: pointer;
@@ -160,7 +150,7 @@ input[type="submit"]:hover{
   border: 1px solid #4ab3c6;
 }
 
-#registerPoint,
+#cadastro,
 #login{
   position: absolute;
   top: 0px;
@@ -182,8 +172,7 @@ input[type="submit"]:hover{
   animation-fill-mode: both;
 }
 
-/* Efeito ao clicar no botão ( Ir para Login ) */
-#forRegister:target ~ .content #registerPoint,
+#forRegister:target ~ .content #cadastro,
 #forLogin:target ~ .content #login{
   z-index: 2;
   -webkit-animation-name: fadeInLeft;
@@ -193,14 +182,12 @@ input[type="submit"]:hover{
   animation-delay: .1s;
 }
 
-/* Efeito ao clicar no botão (Cadastre-se) */
-#registerPoint:target ~ .content #login,
-#forLogin:target ~ .content #registerPoint{
+#registro:target ~ .content #login,
+#forLogin:target ~ .content #cadastro{
   -webkit-animation-name: fadeOutLeft;
   animation-name: fadeOutLeft;
 }
 
-/*fadeInLeft*/
 @-webkit-keyframes fadeInLeft {
   0% {
     opacity: 0;
@@ -223,7 +210,6 @@ input[type="submit"]:hover{
   }
 }
 
-/*fadeOutLeft*/
 @-webkit-keyframes fadeOutLeft {
   0% {
     opacity: 1;
@@ -245,4 +231,3 @@ input[type="submit"]:hover{
     transform: translateX(-20px);
   }
 }
-
